--- a/broadwaybeginnings.html
+++ b/broadwaybeginnings.html
@@ -19,14 +19,33 @@
                   </form>
                 </div>
               </nav>
+              <br>
 <h1>Broadway Beginnings</h1>
+<p>Have you been curious about Broadway? The Broadway scene has so many different genres of songs for each musical and it may be difficult to find out which song you should start out with. This is a list on the top 5 musical songs that I believe you should start with.</p>
 <ol>
-  <li><p>Alexander Hamilton - Hamilton</p></li>
-  <li><p>For Forever - Dear Evan Hansen</p></li>
-  <li><p>She Used to Be Mine - Waitress</p></li>
-  <li><p>Michael in The Bathroom - Be More Chill</p></li>
-  <li><p>One Day More - Les Miserables</p></li>
+  <li><p class="top-5">Alexander Hamilton - Hamilton</p>
+    <iframe src="https://open.spotify.com/embed/track/4TTV7EcfroSLWzXRY6gLv6" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<p>  Let's start off with one of the most famous musical, Hamilton. "Alexander Hamilton" is the opening song of the musical. The creator and lead actor of Hamilton, Lin Manuel-Miranda, was able to compress Hamilton's childhood in a 4 minute song without missing out on any important details. The tone of the song along with the well-written lyrics combine together to create a masterpiece of a song. 
+  To anyone who loves hiphop music, this musical is the one for you. </p>
+</li>
+   <li><p class="top-5">For Forever - Dear Evan Hansen</p>
+    <iframe src="https://open.spotify.com/embed/track/0ZWW07BD8W85lUbgx2sn7E" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></li>
+  <li><p class="top-5">She Used to Be Mine - Waitress</p>
+    <iframe src="https://open.spotify.com/embed/track/7CBrUf50mf2IqcRZla38by" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></li>
+  <li><p class="top-5">Michael in The Bathroom - Be More Chill</p>
+    <iframe src="https://open.spotify.com/embed/track/2NKSdHfJ2j3PnSZUJfXa7J" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></li>
+  <li><p class="top-5">One Day More - Les Miserables</p>
+    <iframe src="https://open.spotify.com/embed/track/4hIPVoHpk0pICSvbfl8hb7" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></li>
 </ol>
+<br>
+<form>
+    <div class="form-group">
+        <label for="exampleFormControlTextarea1">Comment</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <input class="btn btn-primary" type="submit" value="Submit">
+
+</form>
 
 
    </body>
