--- a/musicforall.html
+++ b/musicforall.html
@@ -4,6 +4,8 @@
         <title>Music for All</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="music-for-all.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico&display=swap">
+
       </head>
 <style>
 h1{
@@ -49,7 +51,8 @@ h1{
 
 <h2>Explore</h2>
 <p><a class="explore-pages" href="broadwaybeginnings.html" target="_blank">Broadway Beginnings</a></p>
-
+<p><a class="explore-pages" href="best-of-the-70s.html" target="_blank">The Best of the 70s</a></p>
+<p><a class="explore-pages" href="Timelessongs.html" target="_blank">Timeless Songs</a></p>
 
 
 
@@ -66,12 +69,15 @@ h1{
   <iframe src="https://open.spotify.com/embed/track/2JoZzpdeP2G6Csfdq5aLXP" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></div>
 </div>
 <br>
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="inputGroup-sizing-default">Comment</span>
-    </div>
-    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-  </div>
+<form>
+    <div class="form-group">
+        <label for="exampleFormControlTextarea1">Comment</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <input class="btn btn-primary" type="submit" value="Submit">
+
+</form>
+ 
 </body>
   
 
