--- a/Timelessongs.html
+++ b/Timelessongs.html
@@ -20,13 +20,16 @@
                 </div>
               </nav>
               <br>
+              <div id="content">
 <h1>Timeless Songs</h1>
 
-<ol>
+<ul>
   <li>
     <p class="top-5">Hey Jude - The Beatles</p>
       <iframe src="https://open.spotify.com/embed/track/0aym2LBJBk9DAYuHHutrIl" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-  </li>
+  <p>Another wonderlous feat by Paul McCartney, who wrote the song for John Lennon’s son, Julian, (as the song was originally titled Hey Jules) to let him know that it may be difficult for the time being, but it shall pass too. Lennon originally thought that the song was a blessing from Paul for his marriage to Yoko Ono, who is heavily despised in the music industry as people believe that she is the reason that The Beatles broke up despite their fame. You’ll be singing “na na na” all day.
+  </p>
+    </li>
   <li>
     <p class="top-5">Bohemian Rhapsody - Queen</p>
       <iframe src="https://open.spotify.com/embed/track/4u7EnebtmKWzUH433cf5Qv" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
@@ -34,8 +37,20 @@
   <li>
     <p class="top-5">Imagine - John Lennon</p>
       <iframe src="https://open.spotify.com/embed/track/7pKfPomDEeI4TPT6EOYjn9" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<p>John’s most well-known song as a soloist talks about a world in unity and peace amidst the Vietnam War during the seventies. Imagine is considered as one of the most beautiful and inspirational songs of all time. However, people were able to find fault in his lyrics, calling them “unrealistic” and “too idealistic” or in other words you could say he was a dreamer.
+</p>
+    </li>
+    <li>
+      <p class="top-5">Eye of The Tiger - Survivor</p>
+      <iframe src="https://open.spotify.com/embed/track/2HHtWyy5CgaQbC7XSoOb0e" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <p>The theme song for the boxing movie, Rocky IV, it fits perfectly for any kind of training montage. It has become an anthem for sports events as it tells a story of overcoming hardship. If you ever have to hit the gym, this is the right song to blare through your earphones.
+    </p>
+    </li>
+    <li>
+    <p class="top-5">My Heart Will Go On</p>
+    <iframe src="https://open.spotify.com/embed/track/3oEHQmhvFLiE7ZYES0ulzv" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </li>
-</ol>
+</ul>
 
 <form>
     <div class="form-group">
@@ -45,7 +60,7 @@
       <input class="btn btn-primary" type="submit" value="Submit">
 
 </form>
-
+</div>
 </body>
 
 
