--- a/broadwaybeginnings.html
+++ b/broadwaybeginnings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Music for All</title>
+      <title>Broadway Beginnings</title>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
  <link rel="stylesheet" href="music-for-all.css"> 
     </head> 
@@ -20,23 +20,37 @@
                 </div>
               </nav>
               <br>
-<h1>Broadway Beginnings</h1>
+<div id="content">
+              <h1>Broadway Beginnings</h1>
 <p>Have you been curious about Broadway? The Broadway scene has so many different genres of songs for each musical and it may be difficult to find out which song you should start out with. This is a list on the top 5 musical songs that I believe you should start with.</p>
 <ol>
   <li><p class="top-5">Alexander Hamilton - Hamilton</p>
     <iframe src="https://open.spotify.com/embed/track/4TTV7EcfroSLWzXRY6gLv6" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-<p>  Let's start off with one of the most famous musical, Hamilton. "Alexander Hamilton" is the opening song of the musical. The creator and lead actor of Hamilton, Lin Manuel-Miranda, was able to compress Hamilton's childhood in a 4 minute song without missing out on any important details. The tone of the song along with the well-written lyrics combine together to create a masterpiece of a song. 
-  To anyone who loves hiphop music, this musical is the one for you. </p>
+<p>  Alexander Hamilton is the opening song for the musical, Hamilton. Well-versed in the writing of lyrics and the creation of addicting songs, Lin Manuel-Miranda, the lead actor and creator of Hamilton, brings the story of America’s founding father to the big stage. In a mere 4 minutes, Lin was able to involve most of the main characters in the song, whilst explaining Alexander Hamilton’s background as a child before starting a new life in New York. If you are a hip-hop music lover, this is the musical for you.
+</p>
 </li>
    <li><p class="top-5">For Forever - Dear Evan Hansen</p>
-    <iframe src="https://open.spotify.com/embed/track/0ZWW07BD8W85lUbgx2sn7E" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></li>
-  <li><p class="top-5">She Used to Be Mine - Waitress</p>
-    <iframe src="https://open.spotify.com/embed/track/7CBrUf50mf2IqcRZla38by" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></li>
-  <li><p class="top-5">Michael in The Bathroom - Be More Chill</p>
-    <iframe src="https://open.spotify.com/embed/track/2NKSdHfJ2j3PnSZUJfXa7J" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></li>
+    <iframe src="https://open.spotify.com/embed/track/0ZWW07BD8W85lUbgx2sn7E" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  <p>A beautiful piece from the tony award winning musical Dear Evan Hansen, For Forever brings us along as the main character, Evan Hansen, tells his story about a friendship, or lack thereof, between him and a fellow classmate. This song is all but one of an amazing compilation of other heart-wrenching songs that make up the modern day musical loved by many around the world. Dear Evan Hansen addresses issues teenagers nowadays face including depression, anxiety, and loss, allowing it to deeply connect to people on a deeper level.
+  </p>
+  </li>
+ <li><p class="top-5">She Used to Be Mine - Waitress</p>
+    <iframe src="https://open.spotify.com/embed/track/7CBrUf50mf2IqcRZla38by" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> 
+  <p>She used to me mine is the ballad of a woman who reminisces about her past self, how the version of herself has changed from those simpler days to what it is now. Exposing both highs and lows of her personality and character, she reflects on her past self and how she would trade it all to regain some aspect of what once was. This soulful song comes from the musical Waitress, crafted by the talented Sara Bareilles. It tells the tale of a trio of best friends, waitresses each living their own separate lives. It showcases the realities of life with all its ups and downs. Beware, for this song in particular may lead you to shed a few tears.
+  </p>
+  </li>
+<li><p class="top-5">Michael in The Bathroom - Be More Chill</p>
+    <iframe src="https://open.spotify.com/embed/track/2NKSdHfJ2j3PnSZUJfXa7J" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  <p>Similar to Dear Evan Hansen, Be More Chill is a musical set in today’s world, particularly the high school teenage world. However, this world has a little something different in store. Specialized pills designed to control its user and help him/her gain popularity exist in this universe. The Michael in the  song we will be talking about is suffering the effects of having a best friend influenced by the pill, who seemingly forgets all about him after his newfound popularity. Michael understandably struggles to deal with this and has a breakdown in the bathroom of a party he is in, racking his brains to find out as to how he got himself into the situation he is in. As a one of a kind, this musical fights the stereotype of musicals being boring or all about opera, Be More Chill is jam packed with pop culture references and content specifically tailored to younger generations.
+  </p>
+  </li>
   <li><p class="top-5">One Day More - Les Miserables</p>
-    <iframe src="https://open.spotify.com/embed/track/4hIPVoHpk0pICSvbfl8hb7" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></li>
+    <iframe src="https://open.spotify.com/embed/track/4hIPVoHpk0pICSvbfl8hb7" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  <p>Another historical musical, Lés Miserables  brings us back to the times of the French Revolution. The narrative follows an ex-convict called, Jean Valjean, who strayed away from the right path, but after an encounter with a priest, he realises that he can become a better person.  The song starts out in the perspectives of each individual character in the musical before merging into a glorious ensemble melody. A symbol of freedom, and fighting for justice, this classical musical has also been adapted into a movie. If you’re in need of feeling rebellious, grab a couple of friends and demand they sing this iconic song with you.
+  </p>
+  </li>
 </ol>
+
 <br>
 <form>
     <div class="form-group">
@@ -46,7 +60,8 @@
       <input class="btn btn-primary" type="submit" value="Submit">
 
 </form>
-
+</div>
+<br>
 
    </body>
 </html>
