--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title>Music for All</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="music-for-all.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico&display=swap">
 
       </head>
 <style>
@@ -29,7 +28,7 @@ h1{
 
 <body>
         <nav class="navbar-navbar-expand-lg-navbar-light-bg-light">
-                <a class="navbar-brand">Music for All</a>
+                <a id="title" class="navbar-brand">Music for All</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -41,7 +40,7 @@ h1{
                   </form>
                 </div>
               </nav>
-
+<div id="content">
 <br>
 <h2>Introduction</h2>
 <p>This page will allow you, the reader, to explore all kinds of music.</P>
@@ -53,7 +52,8 @@ h1{
 <p><a class="explore-pages" href="broadwaybeginnings.html" target="_blank">Broadway Beginnings</a></p>
 <p><a class="explore-pages" href="best-of-the-70s.html" target="_blank">The Best of the 70s</a></p>
 <p><a class="explore-pages" href="Timelessongs.html" target="_blank">Timeless Songs</a></p>
-
+<p class="explore-pages">Jpop vs Kpop</p>
+<p class="explore-pages">Oldies but Goodies</p>
 
 
 
@@ -77,7 +77,7 @@ h1{
       <input class="btn btn-primary" type="submit" value="Submit">
 
 </form>
- 
+</div>
 </body>
   
 
