--- a/Timelessongs.html
+++ b/Timelessongs.html
@@ -33,7 +33,8 @@
   <li>
     <p class="top-5">Bohemian Rhapsody - Queen</p>
       <iframe src="https://open.spotify.com/embed/track/4u7EnebtmKWzUH433cf5Qv" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-  </li>
+  <p>Bohemian Rhapsody is a six-minute track which puts a twist to the traditional rock music of the 70s. The song brings the listener through an array of genres and sections. Beginning with a beautiful intro which progresses into a ballad then taking an unexpected turn into an operatic piece before finally reaching the hard rock section. With all these segments, you will soon figure out that there is no singular chorus in the song rather it has a free flowing structure with extravagant harmonies. With Freddie Mercury’s dominant voice and Brian May’s multitracked guitar set, this track was bound for greatness. It is now well-known for its odd structure as well as unknown meaning and has been one of Queen’s greatest hits. This is a song that shaped a generation and is definitely worth a listen. Once you listen to this song there is no turning back before going down a never-ending spiral through one Queen song to another.</p>
+    </li>
   <li>
     <p class="top-5">Imagine - John Lennon</p>
       <iframe src="https://open.spotify.com/embed/track/7pKfPomDEeI4TPT6EOYjn9" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
@@ -44,11 +45,15 @@
       <p class="top-5">Eye of The Tiger - Survivor</p>
       <iframe src="https://open.spotify.com/embed/track/2HHtWyy5CgaQbC7XSoOb0e" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     <p>The theme song for the boxing movie, Rocky IV, it fits perfectly for any kind of training montage. It has become an anthem for sports events as it tells a story of overcoming hardship. If you ever have to hit the gym, this is the right song to blare through your earphones.
+   <p> <a class="utube" href="https://youtu.be/-yE8SYzZ6Eo" target="_blank">"Why Bohemian Rhapsody is the Best Song Ever Written"</a></p>
     </p>
     </li>
     <li>
     <p class="top-5">My Heart Will Go On</p>
     <iframe src="https://open.spotify.com/embed/track/3oEHQmhvFLiE7ZYES0ulzv" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  <p>
+    You should have listened to this song at least once in your life. The song is always associated with the iconic scene of Leonardo DiCaprio hugging Kate Winslet from the back. Celine Dion’s strong vocals shines throughout the entire song and everyone wishes they had the same vocal range as they try to sing the climax of the song. 
+    </p>
   </li>
 </ul>
 
